--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.jpa.show-sql=true
 
 #Configuracao do keycloak
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/auth/realms/desenvolvimento/protocol/openid-connect/certs
-#spring.security.oauth2.resourceserver.jwt.jws-algorithm={KEY.PUBLIC}
 #server.servlet.context-path=/
-logging.level.br.gov.caixa.sivit=TRACE
+
+
+logging.level.br.com.mypalce=TRACE
 logging.level.root=WARN
