--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.datasource.url= jdbc:mysql://localhost:3306/db_myplace?createDatabaseIfNo
 spring.datasource.username=root
 spring.datasource.data.password=
 
-spring.jpa.hibernate.ddl-auto= none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+spring.jpa.hibernate.ddl-auto= validate
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #Configuracao do keycloak
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/auth/realms/desenvolvimento/protocol/openid-connect/certs
@@ -11,4 +15,4 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/auth
 
 
 logging.level.br.com.mypalce=TRACE
-logging.level.root=WARN
+logging.level.root=ERROR
